@@ -19,14 +19,8 @@ class BrokerTest {
     @BeforeEach
     void beforeEach() throws IOException, InterruptedException {
         broker = new Broker("N1");
-        Thread.ofVirtual().start(() -> {
-            try {
-                broker.run(PORT);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        });
-        Thread.sleep(200);
+        TestUtil.startInNewThread(broker, PORT);
+        broker.waitForBrokerToAcceptConnections();
 
         client1 = new Client(PORT, "C1");
         client2 = new Client(PORT, "C2");
@@ -50,25 +44,26 @@ class BrokerTest {
     @DisplayName("2 clients, 1 message")
     void test() throws IOException, InterruptedException {
         client2.subscribe("topic1");
-        Thread.sleep(100);
         client1.publish("topic1", "My string data");
 
         Thread.sleep(100);
         assertEquals(1, client2.getConsumedMessages("topic1").size());
-        assertEquals("My string data", client2.getConsumedMessages("topic1").get(0));
+        assertEquals("My string data", client2.getConsumedMessages("topic1").getFirst());
     }
 
     @Test
-    @DisplayName("2 clients, 1 message but receiver disappears")
+    @DisplayName("2 clients, 1 message but receiver disappears, message should wait inside the broker")
     void testDisappearingClient() throws IOException, InterruptedException {
         client2.subscribe("topic1");
         client2.closeSocket();
-        Thread.sleep(100);
+
         client1.publish("topic1", "My string data");
+        Thread.sleep(10);
+        assertEquals(1,broker.getCountOfCurrentlyStoredMessages());
     }
 
     @Test
-    @DisplayName("2 clients, 2 messages")
+    @DisplayName("2 clients, both are subscribed to the same topic and both publish a message")
     void test2() throws IOException, InterruptedException {
         client1.subscribe("topic1");
         client2.subscribe("topic1");
@@ -77,7 +72,6 @@ class BrokerTest {
         client2.publish("topic1", "Hello from C2");
 
         Thread.sleep(100);
-        broker.hook();
 
         assertEquals(2, client1.getConsumedMessages("topic1").size());
         assertTrue(client1.getConsumedMessages("topic1").contains("Hello from C1"));
@@ -87,35 +81,16 @@ class BrokerTest {
         assertTrue(client2.getConsumedMessages("topic1").contains("Hello from C1"));
         assertTrue(client2.getConsumedMessages("topic1").contains("Hello from C2"));
 
+        assertTrue(broker.isEmpty());
     }
 
     @Test
-    @DisplayName("3 Clients, 1 message")
-    void testWithTwoProducers() throws IOException, InterruptedException {
-        var client3 = new Client(PORT, "C3");
-
-        client2.subscribe("topic1");
-        client3.subscribe("topic1");
-        Thread.sleep(100);
-
-        client1.publish("topic1", "My string data");
-        Thread.sleep(100);
-
-        assertEquals(1, client2.getConsumedMessages("topic1").size());
-        assertEquals("My string data", client2.getConsumedMessages("topic1").get(0));
-
-        assertEquals(1, client3.getConsumedMessages("topic1").size());
-        assertEquals("My string data", client3.getConsumedMessages("topic1").get(0));
-    }
-
-    @Test
-    @DisplayName("3 Clients, 2 messages from two different clients")
+    @DisplayName("3 subscribed clients, 2 messages from two different clients")
     void test3() throws IOException, InterruptedException {
         var client3 = new Client(PORT, "C3");
         client1.subscribe("topic1");
         client2.subscribe("topic1");
         client3.subscribe("topic1");
-        Thread.sleep(100);
 
         client1.publish("topic1", "Hello from C1");
         client2.publish("topic1", "Hello from C2");
@@ -133,22 +108,26 @@ class BrokerTest {
         assertEquals(2, client3.getConsumedMessages("topic1").size());
         assertTrue(client3.getConsumedMessages("topic1").contains("Hello from C1"));
         assertTrue(client3.getConsumedMessages("topic1").contains("Hello from C2"));
+
+        assertTrue(broker.isEmpty());
     }
 
     @Test
     @DisplayName("Multiple topics")
     void multipleTopics() throws IOException, InterruptedException {
         client2.subscribe("topic1");
-        Thread.sleep(10);
         client1.publish("topic1", "messag");
         client1.publish("topic2", "messagee"); //client2 is not subscribed
 
         Thread.sleep(10);
         assertTrue(client1.getConsumedMessages("topic1").isEmpty());
+        assertTrue(client1.getConsumedMessages("topic2").isEmpty());
 
         assertEquals(1, client2.getConsumedMessages("topic1").size());
         assertTrue(client2.getConsumedMessages("topic1").contains("messag"));
         assertTrue(client2.getConsumedMessages("topic2").isEmpty());
+
+        assertTrue(broker.isEmpty());
     }
 
     @Test
@@ -172,6 +151,8 @@ class BrokerTest {
         assertTrue(client2.getConsumedMessages("topic1").contains("My string data 1"));
         assertTrue(client2.getConsumedMessages("topic1").contains("My string data 2"));
         assertTrue(client2.getConsumedMessages("topic1").contains("My string data 3"));
+
+        assertTrue(broker.isEmpty());
     }
 
     @Test
@@ -179,20 +160,22 @@ class BrokerTest {
     void test11() throws IOException, InterruptedException {
         client2.subscribe("topic1", "group1");
         client1.subscribe("topic1", "group1");
-        Thread.sleep(100);
         for (int i = 0; i < 20; i++) {
             client1.publish("topic1", "My string data");
         }
         Thread.sleep(100);
         assertEquals(10, client1.getConsumedMessages("topic1").size());
         assertEquals(10, client2.getConsumedMessages("topic1").size());
+
+        assertTrue(broker.isEmpty());
     }
 
     @Test
-    @DisplayName("unsubscribe")
+    @DisplayName("after unsubscribing, messages will not longer be delivered to that client."
+            + "+ when there are not clients left for that consumergroup, the entire cg will be detached from the topic"
+            + ", consequently, new messages will not stored locally")
     void unsubscribe1() throws IOException, InterruptedException {
         client2.subscribe("topic1", "group1");
-        Thread.sleep(100);
         client1.publish("topic1", "My string data");
         Thread.sleep(100);
         assertEquals(1, client2.getConsumedMessages("topic1").size());
@@ -201,6 +184,8 @@ class BrokerTest {
         client1.publish("topic1", "My string data after unsub");
         Thread.sleep(100);
         assertEquals(1, client2.getConsumedMessages("topic1").size());
+
+        assertTrue(broker.isEmpty());
     }
 
 }
