@@ -1,6 +1,3 @@
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.Collections;
@@ -8,6 +5,9 @@ import java.util.Collections;
 import niklase.broker.Broker;
 import niklase.client.Client;
 import org.junit.jupiter.api.AfterEach;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -15,7 +15,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 class ReplicationTest {
-    private static final Logger logger = LoggerFactory.getLogger(ReplicationTest.class);
 
     public static final int CLIENT_PORT_BROKER_1 = 1500;
     public static final int REPLICATION_PORT_BROKER_1 = 1501;
@@ -30,25 +29,13 @@ class ReplicationTest {
     void beforeEach() throws IOException, InterruptedException {
         broker1 = new Broker("N1");
         broker1.setClusterEntryLocalPort(REPLICATION_PORT_BROKER_1);
-        Thread.ofVirtual().start(() -> {
-            try {
-                broker1.run(CLIENT_PORT_BROKER_1);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        });
-        Thread.sleep(100);
+        TestUtil.startInNewThread(broker1, CLIENT_PORT_BROKER_1);
+        broker1.waitForBrokerToAcceptConnections();
         broker2 = new Broker("N2");
         broker2.joinCluster(new InetSocketAddress("localhost", REPLICATION_PORT_BROKER_1));
         broker2.setClusterEntryLocalPort(REPLICATION_PORT_BROKER_2);
-        Thread.ofVirtual().start(() -> {
-            try {
-                broker2.run(CLIENT_PORT_BROKER_2);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        });
-        Thread.sleep(1000); // wait for exchange of replication requests
+        TestUtil.startInNewThread(broker2, CLIENT_PORT_BROKER_2);
+        broker1.waitForReplicationLinks(1);
         client1 = new Client(CLIENT_PORT_BROKER_1, "C1");
         client2 = new Client(CLIENT_PORT_BROKER_2, "C2");
     }
@@ -69,8 +56,8 @@ class ReplicationTest {
         Thread.sleep(100);
         client1.publish("topic1", "My string data1");
 
-        Thread.sleep(1000);
-        assertEquals("My string data1", client2.getConsumedMessages("topic1").get(0));
+        Thread.sleep(100);
+        assertEquals("My string data1", client2.getConsumedMessages("topic1").getFirst());
     }
 
     @Test
@@ -79,20 +66,25 @@ class ReplicationTest {
         client1.subscribe("topic1", "cg1");
         Thread.sleep(100); // TODO implement concurrent REORG_DOL sessions
         client2.subscribe("topic1", "cg1");
-        Thread.sleep(100);
+        broker1.waitForTerminationOfFirstReorgDolSession();
+        broker2.waitForTerminationOfFirstReorgDolSession();
+        Thread.sleep(10);
         for (int i = 0; i < 10; i++) {
             // for some reason, the hashcodes %2 for these generated messages are evenly distributed
             client1.publish("topic1", "My string data " + i);
         }
 
-        Thread.sleep(1000);
+        Thread.sleep(100);
 
         printBrokerState(broker1);
         printBrokerState(broker2);
 
-
         assertEquals(5, client1.getConsumedMessages("topic1").size());
         assertEquals(5, client2.getConsumedMessages("topic1").size());
+
+        // assert message distribution rules are different
+        assertNotEquals(broker1.getMessageDistributionRule(), broker2.getMessageDistributionRule());
+
         assertTrue(Collections.disjoint(
                 client1.getConsumedMessages("topic1"),
                 client2.getConsumedMessages("topic1"))
@@ -101,8 +93,9 @@ class ReplicationTest {
 
     private void printBrokerState(final Broker broker1) {
         System.out.println(broker1.getNodeId() + ":");
-        System.out.println(broker1.getTotalMessageCount() + " messages left");
+        System.out.println(broker1.getCountOfCurrentlyStoredMessages() + " messages left");
         System.out.println(broker1.getIncomingMessageCount() + " incoming messages");
+        System.out.println("Message distribution rule:  " + broker1.getMessageDistributionRule());
     }
 
     @Test
@@ -116,11 +109,11 @@ class ReplicationTest {
         client1.publish("topic1", "My string data1");
 
         Thread.sleep(100);
-        assertEquals("My string data1", client2.getConsumedMessages("topic1").get(0));
+        assertEquals("My string data1", client2.getConsumedMessages("topic1").getFirst());
 
         //both brokers are empty
-        assertEquals(0, broker1.getTotalMessageCount()); //TODO implement deletion propagation
-        assertEquals(0, broker2.getTotalMessageCount());
+        assertEquals(0, broker1.getCountOfCurrentlyStoredMessages()); //TODO implement deletion propagation
+        assertEquals(0, broker2.getCountOfCurrentlyStoredMessages());
     }
 
     @Test
@@ -132,9 +125,9 @@ class ReplicationTest {
         client1.publish("topic1", "My string data1");
         client1.publish("topic1", "My string data1");
 
-        Thread.sleep(1000);
-        assertEquals(2, broker1.getTotalMessageCount());
-        assertEquals(2, broker2.getTotalMessageCount());
+        Thread.sleep(100);
+        assertEquals(2, broker1.getCountOfCurrentlyStoredMessages());
+        assertEquals(2, broker2.getCountOfCurrentlyStoredMessages());
     }
 
     @Test
@@ -151,8 +144,8 @@ class ReplicationTest {
 
         // assert message has been replicated to broker 2
         Thread.sleep(100);
-        assertEquals(2, broker2.getTotalMessageCount()); // message is stored twice. one for each cg
-        assertEquals(2, broker1.getTotalMessageCount());
+        assertEquals(2, broker2.getCountOfCurrentlyStoredMessages()); // message is stored twice. one for each cg
+        assertEquals(2, broker1.getCountOfCurrentlyStoredMessages());
 
         var client4 = new Client(CLIENT_PORT_BROKER_1, "C4");
         client1.subscribe("t1", "cg1");
@@ -163,12 +156,12 @@ class ReplicationTest {
         broker2.setMessageDeliveryFilter(1);
         Thread.sleep(100);
 
-        assertEquals(1,client1.getConsumedMessages("t1").size());
-        assertEquals(1,client4.getConsumedMessages("t1").size());
+        assertEquals(1, client1.getConsumedMessages("t1").size());
+        assertEquals(1, client4.getConsumedMessages("t1").size());
 
         Thread.sleep(100);
-        assertEquals(0, broker2.getTotalMessageCount());
-        assertEquals(0, broker1.getTotalMessageCount());
+        assertEquals(0, broker2.getCountOfCurrentlyStoredMessages());
+        assertEquals(0, broker1.getCountOfCurrentlyStoredMessages());
 
     }
 
